--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,25 @@
     background: #f1f1f1;
     display: grid;  
     font-family: Arial, Helvetica, sans-serif;
+    grid-template-areas: 
+        "cabecalho"
+        "conteudo"
+        "rodape";
+    grid-template-columns: auto;
+    grid-template-rows: 50px auto auto;
 }
 
 .cabecalho {
+    background: #00cc99;
+    grid-area: cabecalho;
 }
  
 .conteudo {
+    background: #ff8080;
+    grid-area: conteudo;
 }
 
 .rodape {
+    background: #ffcc01;
+    grid-area: rodape;
 }
