--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,17 +7,26 @@
         "conteudo"
         "rodape";
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh auto;
+    grid-template-rows: 50px auto auto; 
 }
 
 .cabecalho {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
     grid-area: cabecalho;
 }
-
+ 
 .conteudo {
     grid-area: conteudo;
+    padding: 0 2rem;
 }
 
 .rodape {
+    background: #fdfdfdfd;
+    color: #3333333;
+    font-size: .8rem;
+    padding: 1rem;
+    text-align: center;
     grid-area: rodape;
 }
